_generated-doc/2.13/config/quarkus-security-jaxrs-jax-rs-security-config.adoc

:summaryTableId: quarkus-security-jaxrs-jax-rs-security-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-jaxrs-jax-rs-security-config_configuration]]link:#quarkus-security-jaxrs-jax-rs-security-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-security-jaxrs-jax-rs-security-config_quarkus.security.jaxrs.deny-unannotated-endpoints]]`link:#quarkus-security-jaxrs-jax-rs-security-config_quarkus.security.jaxrs.deny-unannotated-endpoints[quarkus.security.jaxrs.deny-unannotated-endpoints]`

[.description]
--
if set to true, access to all JAX-RS resources will be denied by default

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_JAXRS_DENY_UNANNOTATED_ENDPOINTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_JAXRS_DENY_UNANNOTATED_ENDPOINTS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-security-jaxrs-jax-rs-security-config_quarkus.security.jaxrs.default-roles-allowed]]`link:#quarkus-security-jaxrs-jax-rs-security-config_quarkus.security.jaxrs.default-roles-allowed[quarkus.security.jaxrs.default-roles-allowed]`

[.description]
--
If no security annotations are affecting a method then they will default to requiring these roles, (equivalent to adding an @RolesAllowed annotation with the roles to every endpoint class). The role of '++**++' means any authenticated user, which is equivalent to the `io.quarkus.security.Authenticated` annotation.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_JAXRS_DEFAULT_ROLES_ALLOWED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_JAXRS_DEFAULT_ROLES_ALLOWED+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|

|===